# watchtower

./: .gitignore  README.md  scraper.py  scraper.yml
.github/workflows/: scrape.yml
backend/: clean_for_clickhouse.py  collect_saas_signals.py  collect_saas_test.py  main.py  pyproject.toml  python_nimb.py  saas_competitor_signals.json
backend/cleanup_data/: activity_clean.json  case_studies_clean.json  pricing_clean.json  reviews_clean.json
backend/data/: activity.json  case_studies.json  pricing.json  reviews.json
backend/watchtower_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
