[project]
name = "watchtower-backend"
version = "0.1.0"
description = "AI competitive intelligence backend"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "python-dotenv",
    "clickhouse-connect"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"